--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -1,8 +1,9 @@
 <% if line_item == @current_item %>
 <tr id="current_item">
 <% else %>
-</tr>
+<tr>
 <% end %>
+        <td><%= button_to '-', decrement_line_item_path(line_item, product_id: line_item.product.id) %></td>
 	<td><%= line_item.quantity %>&times;</td>
 	<td><%= line_item.product.title %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
