--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -3,7 +3,8 @@
 <% else %>
 <tr>
 <% end %>
-        <td><%= button_to '-', decrement_line_item_path(line_item, product_id: line_item.product.id) %></td>
+        <td><%= button_to '+', line_items_path(product_id: line_item.product.id), remote: true %></td>
+        <td><%= button_to '-', decrement_line_item_path(line_item, product_id: line_item.product.id), remote: true %></td>
 	<td><%= line_item.quantity %>&times;</td>
 	<td><%= line_item.product.title %></td>
 	<td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
